--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,12 @@
 {
-    "name": "laravel/laravel",
+    "name": "vdhsoft-com/laravel-10-crud",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "Small CRUD example on how to use SQLite database in Laravel 10.",
+    "keywords": ["laravel", "framework", "sqlite"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
